--- a/MyPlaces/IBuilder/Launch Screen.storyboard
+++ b/MyPlaces/IBuilder/Launch Screen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="1" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreenImg.png" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ak5-1A-cQE">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" red="0.5647059083" green="0.87450981139999995" blue="0.66666668650000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             </imageView>
                         </subviews>
@@ -24,9 +25,9 @@
                         <color key="backgroundColor" red="0.5647059083" green="0.87450981139999995" blue="0.66666668650000005" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="Bcu-3y-fUS" firstAttribute="trailing" secondItem="ak5-1A-cQE" secondAttribute="trailing" id="9iW-N1-amz"/>
-                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="ak5-1A-cQE" secondAttribute="bottom" id="Fy2-tu-OC8"/>
+                            <constraint firstItem="Bcu-3y-fUS" firstAttribute="bottom" secondItem="ak5-1A-cQE" secondAttribute="bottom" constant="-34" id="Fy2-tu-OC8"/>
                             <constraint firstItem="ak5-1A-cQE" firstAttribute="leading" secondItem="Bcu-3y-fUS" secondAttribute="leading" id="K7m-f5-WVV"/>
-                            <constraint firstItem="ak5-1A-cQE" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" id="x8R-gg-WmT"/>
+                            <constraint firstItem="ak5-1A-cQE" firstAttribute="top" secondItem="Bcu-3y-fUS" secondAttribute="top" constant="-44" id="x8R-gg-WmT"/>
                         </constraints>
                     </view>
                 </viewController>
